tests/errors/compiler/aster_before_func/void_func.c
void *func()
{
	return;
}

void main()
{

}
